Migrate from deprecated boxed primitive constructors (#220)
to their replacements. E.g., `new Integer(...)` becomes
`Integer.valueOf(...)`.