@@ -68,7 +68,7 @@ public class CollectionUtils {
         Map indexes = new HashMap();
         int index = 0;
         for (Iterator it = list.iterator(); it.hasNext();) {
-            indexes.put(it.next(), new Integer(index++));
+            indexes.put(it.next(), Integer.valueOf(index++));
         }
         return indexes;
     }
